Upgrade to Spring Boot 3.5.3 and fix Sonar issues
- Bump Spring Boot 3.3.4 → 3.5.3 (Spring Framework 6.2.x, Spring Security 6.5.x, Hibernate 6.6.x)
- Bump MapStruct 1.5.5.Final → 1.6.3, Lombok 1.18.34 → 1.18.36
- Bump SpringDoc OpenAPI 2.6.0 → 2.8.6, JaCoCo 0.8.12 → 0.8.13
- JwtUtil: remove redundant Base64 encode-decode roundtrip; expand wildcard import
- GlobalExceptionHandler: add log.warn to fix unused parameter (Sonar S1172)
- SecurityConfig: inject CorsConfigurationSource bean explicitly (Spring Security 6.x pattern)
- CorsConfig: replace Arrays.asList with List.of (Sonar S4350)
- README: update tech stack and add dependency versions table

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>